Changed docs and fixed bugs in routes
